docs: Add IntelliJ IDEA Java module access configuration
- Created .sbtopts with Java 17/21 module access options
- Added comprehensive troubleshooting section for IntelliJ IDEA
- Documented VM options configuration for Run Configurations
- Provided two solutions: manual VM options or sbt execution

IntelliJ IDEA Configuration:
- Module access error when running tests in IDE
- Solution 1: Add VM options to Run Configuration
- Solution 2: Use sbt from command line (recommended)

Problem:
IntelliJ IDEA doesn't automatically apply javaOptions from build.sbt
when running tests through the IDE test runner.

Files Changed:
- .sbtopts: Java module access options for sbt
- README.md: Added IntelliJ IDEA troubleshooting section

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>